--- a/research.ipynb
+++ b/research.ipynb
@@ -935,9 +935,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymcmain",
+   "display_name": "pymc4",
    "language": "python",
-   "name": "pymcmain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -949,7 +949,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1cc05d71c091818f3a20105c117b9e65164e6ad677e8fb3b94fb2c20e86bdea0"
+   }
   }
  },
  "nbformat": 4,
