--- a/odes-exp02.ipynb
+++ b/odes-exp02.ipynb
@@ -182,9 +182,9 @@
     "    # y0_1 = pm.HalfNormal(\"y0_1\", 10)\n",
     "    # y0_2 = pm.HalfNormal(\"y0_2\", 10)\n",
     "\n",
-    "    # y0_1 = pm.DiracDelta(\"y0_1\", 10)\n",
-    "    # y0_2 = pm.DiracDelta(\"y0_2\", 5)\n",
-    "    y0_1,y0_2 = 10, 5\n",
+    "    y0_1 = pm.DiracDelta(\"y0_1\", 10)\n",
+    "    y0_2 = pm.DiracDelta(\"y0_2\", 5)\n",
+    "    # y0_1,y0_2 = 10, 5\n",
     "\n",
     "    sim = pm.Simulator(\"sim\", competition_model, params=((y0_1,y0_2), a, b), epsilon=0.001, observed=observed,distance=\"laplace\")\n",
     "\n",
@@ -380,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymc5",
+   "display_name": "pymc4",
    "language": "python",
    "name": "python3"
   },
@@ -394,11 +394,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8da5d1a2df40cb7bc3c1e3a8ed6a2e43327c8409f81a9d30609b981beff30ffa"
+    "hash": "1cc05d71c091818f3a20105c117b9e65164e6ad677e8fb3b94fb2c20e86bdea0"
    }
   }
  },
