modify to solve_ivp

--- a/odes-exp03.ipynb
+++ b/odes-exp03.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "23239e1e-3500-4e02-90a8-12f9565be6b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (aesara.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import arviz as az\n",
     "import pandas as pd\n",
@@ -44,14 +52,14 @@
     "    def __init__(self, dataset_path):\n",
     "\n",
     "        self.dataset_path = dataset_path\n",
-    "        \n",
+    "\n",
     "        df = pd.read_csv(dataset_path)\n",
-    "        \n",
+    "\n",
     "        self.df = df\n",
     "        self._setup()\n",
-    "    \n",
+    "\n",
     "    def _setup(self):\n",
-    "        \n",
+    "\n",
     "        df = self.df\n",
     "        # 数据初步处理\n",
     "        # 计算反应速率rate，初始速率固定设置为0\n",
@@ -89,24 +97,24 @@
     "        self.cct = self.df[self.cct_names].values\n",
     "        self.rates = self.df[self.rates_names].values\n",
     "        self.errors = self.df[self.error_names].values\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "    def set_as_sim_dataset(self, dcdt_fuc, t_eval, y0, args):\n",
-    "        \n",
+    "\n",
     "        y = odeint(dcdt_fuc, y0=y0, t=t_eval, args=args)\n",
-    "        \n",
+    "\n",
     "        # y.shape (size, 10)\n",
     "        df_new = pd.DataFrame(columns=['time'] + self.cct_names)\n",
     "        df_new['time'] = t_eval\n",
-    "        \n",
+    "\n",
     "        for c_name, col_val in zip(self.cct_names, np.transpose(y, [1,0])):\n",
     "            df_new[c_name] = col_val\n",
     "            df_new[f\"{c_name}-error\"] = 0.001\n",
-    "        \n",
+    "\n",
     "        self.df = df_new\n",
     "        self._setup()\n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "    def get_rates(self):\n",
     "        return self.rates\n",
     "\n",
@@ -165,7 +173,7 @@
     "        r10 = p.k10 * c.xNOrg if k_kinetics[9] == 1 else p.k10\n",
     "        r11 = p.k11 * c.xNOrg if k_kinetics[10] == 1 else p.k11\n",
     "\n",
-    "        \n",
+    "\n",
     "        dc_xNH3 = 2 * r1 + r7 + r10 - r2 - r6 - r9\n",
     "        dc_xNO3 = r3 - r7 - r4 - r8 + r11\n",
     "        dc_xNO2 = r2 + r4 - r3 - r6 - 2 * r5\n",
@@ -179,7 +187,7 @@
     "        dc_AN2 = ((c.ANO2 - c.AN2) * r5 + (c.ANO2 * c.ANH3 - c.AN2) * r6) / c.xN2\n",
     "\n",
     "        # dcdts = [dc_xNH3, dc_xNO3, dc_xNO2, dc_xNOrg, dc_xN2, dc_ANH3, dc_ANO3, dc_ANO2, dc_ANOrg, dc_AN2]\n",
-    "        \n",
+    "\n",
     "        dcdts =  {\n",
     "            'xNH3': dc_xNH3,\n",
     "            'xNO3': dc_xNO3,\n",
@@ -193,7 +201,7 @@
     "            'AN2': dc_AN2,\n",
     "        }\n",
     "        return dcdts\n",
-    "    \n",
+    "\n",
     "    return _dcdt_func\n",
     "\n",
     "def dcdt_func_for_odeint(c, t, ks, k_kinetics):\n",
@@ -201,7 +209,7 @@
     "    # print(c, t, ks, k_kinetics)\n",
     "    # print()\n",
     "    c_xNH3, c_xNO3, c_xNO2, c_xNOrg, c_xN2, c_ANH3, c_ANO3, c_ANO2, c_ANOrg, c_AN2 = c\n",
-    "    \n",
+    "\n",
     "    r1 = ks[0] * c_xN2 if k_kinetics[0] == 1 else ks[0]\n",
     "    r2 = ks[1] * c_xNH3 if k_kinetics[1] == 1 else ks[1]\n",
     "    r3 = ks[2] * c_xNO2 if k_kinetics[2] == 1 else ks[2]\n",
@@ -213,8 +221,8 @@
     "    r9 = ks[8] * c_xNH3 if k_kinetics[8] == 1 else ks[8]\n",
     "    r10 = ks[9] * c_xNOrg if k_kinetics[9] == 1 else ks[9]\n",
     "    r11 = ks[10] * c_xNOrg if k_kinetics[10] == 1 else ks[10]\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "\n",
     "    dc_xNH3 = 2 * r1 + r7 + r10 - r2 - r6 - r9\n",
     "    dc_xNO3 = r3 - r7 - r4 - r8 + r11\n",
@@ -264,10 +272,10 @@
    "outputs": [],
    "source": [
     "def plot_dataset(dataset, dataset_pred=None):\n",
-    "    \n",
+    "\n",
     "    df = dataset.get_df()\n",
     "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
-    "    \n",
+    "\n",
     "    cols = 5\n",
     "    rows = math.ceil(len(cct_names) / cols)\n",
     "\n",
@@ -281,7 +289,7 @@
     "        if i >= len(cct_names):\n",
     "            axes.axis('off')\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        y_name = cct_names[i]\n",
     "        Y = df[y_name].values\n",
     "        axes.plot(df['time'].values, Y, '*', label=f\"ob\")\n",
@@ -289,13 +297,13 @@
     "        axes.set_xlabel(f'time(h)')\n",
     "\n",
     "        # axes.plot(df['time'].values, df[rates_names[i]].values, '+', label=f\"rate\")\n",
-    "        \n",
+    "\n",
     "        if dataset_pred:\n",
     "            _df_pred = dataset_pred.get_df()\n",
     "            t_eval = _df_pred['time'].values\n",
     "            axes.plot(t_eval, _df_pred[y_name].values, 'r', label=f\"c(t)\")\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "        # axes.plot(t_eval, dcdt_df[y_name].values,'g', label=f\"c'(t)\")\n",
     "\n",
     "        axes.legend()\n",
@@ -321,13 +329,13 @@
     "    times = df['time'].values\n",
     "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "    ccts = dataset.get_cct()\n",
-    "    \n",
+    "\n",
     "    mcmc_model = pm.Model()\n",
     "    params_n = 11\n",
     "\n",
     "    parames =[]\n",
     "    c0 = []\n",
-    "    \n",
+    "\n",
     "    with mcmc_model:\n",
     "        for ki in range(1, params_n + 1):\n",
     "            if kf_type == 0:\n",
@@ -337,7 +345,7 @@
     "            else:\n",
     "                p_dense = pm.Normal(f\"k{ki}\",mu=0, sigma=k_sigma_priors)\n",
     "            parames.append(p_dense)\n",
-    "        \n",
+    "\n",
     "        # for c_name in cct_names:\n",
     "        #     _maxx = df[c_name].values.max()\n",
     "        #     _c0 = df[c_name].values[0]\n",
@@ -351,7 +359,7 @@
     "    # print(c0)\n",
     "    with mcmc_model:\n",
     "        sim = pm.Simulator(\"sim\", competition_model, params=(t_eval, c0, parames, k_kinetics),distance=distance, epsilon=epsilon, observed=ccts)\n",
-    "    \n",
+    "\n",
     "    return mcmc_model\n",
     "\n",
     "\n",
@@ -359,17 +367,17 @@
     "\n",
     "    df = dataset.get_df()\n",
     "    times = df['time'].values\n",
-    "    \n",
+    "\n",
     "    errors = dataset.get_errors()\n",
     "    rates = dataset.get_rates()\n",
     "    cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
-    "        \n",
+    "\n",
     "    # 定义参数优化模型\n",
     "    mcmc_model = pm.Model()\n",
     "    ## 参数个数\n",
     "    params_n = 11\n",
     "    parames ={}\n",
-    "    \n",
+    "\n",
     "    with mcmc_model:\n",
     "        for ki in range(1, params_n + 1):\n",
     "            if kf_type == 0:\n",
@@ -377,15 +385,15 @@
     "            else:\n",
     "                p_dense = pm.Normal(f\"k{ki}\",mu=0, sigma=k_sigma_priors)\n",
     "            parames[f\"k{ki}\"] = (p_dense, ())\n",
-    "    \n",
+    "\n",
     "    parames['extra']=  np.zeros(1)\n",
-    "    \n",
+    "\n",
     "    c0 = {}\n",
     "    with mcmc_model:\n",
     "        for c_name in cct_names:\n",
     "            _maxx = df[c_name].values.max()\n",
     "            c0[f\"{c_name}\"] = (pm.HalfNormal(f\"{c_name}_s\", sigma=_maxx), ())\n",
-    "        \n",
+    "\n",
     "\n",
     "        y_hat, _, problem, solver, _, _ = sunode.wrappers.as_pytensor.solve_ivp(\n",
     "            y0=c0,\n",
@@ -394,7 +402,7 @@
     "            tvals=times,\n",
     "            t0=times[0],\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        sd = pm.HalfNormal('sd')\n",
     "        for c_name in cct_names:\n",
     "            pm.Normal(f'{c_name}', mu=y_hat[f\"{c_name}\"], sigma=sd, observed=df[f\"{c_name}\"].values)\n",
@@ -411,7 +419,7 @@
    "outputs": [],
    "source": [
     "# 假设都是一级动力学\n",
-    "k_kinetics = np.repeat(1, 11).astype(np.uint8) \n",
+    "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "# ks = np.random.random(11)/100 # 先验k\n",
     "ks = np.array([0.00071942, 0.00269696, 0.00498945, 0.00444931, 0.00571299, 0.00801272, 0.00131931, 0.00319959, 0.00415571, 0.00228432, 0.00177611])\n",
     "#  =======================================================\n",
@@ -1199,7 +1207,7 @@
     "# 运行时间：61分钟\n",
     "# 其他的重要参数\n",
     "#--------------------------------------------------------------------------\n",
-    "# k_kinetics = np.repeat(1, 11).astype(np.uint8) \n",
+    "# k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "# ks = np.array([0.00071942, 0.00269696, 0.00498945, 0.00444931, 0.00571299, 0.00801272, 0.00131931, 0.00319959, 0.00415571, 0.00228432, 0.00177611])\n",
     "# t_eval = np.array([0.5, 48, 96, 144])\n",
     "# def distance_func(epsilon, obs_data, sim_data):\n",
