--- a/odes-exp01.ipynb
+++ b/odes-exp01.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5625b3a3",
+   "metadata": {},
+   "source": [
+    "### PyMC原生的微分方程求解器代码示例\n",
+    "- 速度非常非常慢\n",
+    "- 要求pymc4.x\n",
+    "- E5-2640v4运行80分钟没跑完"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "23239e1e-3500-4e02-90a8-12f9565be6b0",
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "73cf57f5-8e36-4bcf-9c17-612589c4146f",
    "metadata": {},
    "outputs": [
@@ -84,16 +96,12 @@
     "    di = p[0] * y[0] * y[1] - p[1] * y[1]\n",
     "    return [ds, di]\n",
     "\n",
-    "\n",
     "times = np.arange(0, 5, 0.25)\n",
     "\n",
     "beta, gamma = 4, 1.0\n",
     "\n",
     "# Create true curves\n",
     "y = odeint(SIR, t=times, y0=[0.99, 0.01], args=((beta, gamma),), rtol=1e-8)\n",
-    "\n",
-    "\n",
-    "print(y.shape)\n",
     "\n",
     "# Observational model.  Lognormal likelihood isn't appropriate, but we'll do it anyway\n",
     "yobs = np.random.lognormal(mean=np.log(y[1::]), sigma=[0.2, 0.3])\n",
@@ -105,15 +113,12 @@
     "plt.plot(times, y[:, 0], color=\"C0\", alpha=0.5, label=f\"$S(t)$\")\n",
     "plt.plot(times, y[:, 1], color=\"C1\", alpha=0.5, label=f\"$I(t)$\")\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "print(yobs.shape,times.shape)"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "0e3182f0-9a87-47e7-8e86-02430e7f5a25",
    "metadata": {},
    "outputs": [],
@@ -138,53 +143,24 @@
     "\n",
     "    sir_curves = sir_model(y0=[0.99, 0.01], theta=[beta, lam])\n",
     "\n",
-    "    Y = pm.Lognormal(\"Y\", mu=pm.math.log(sir_curves), sigma=sigma, observed=yobs)\n",
-    "\n"
+    "    Y = pm.Lognormal(\"Y\", mu=pm.math.log(sir_curves), sigma=sigma, observed=yobs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "db74a58c-114a-4c26-a4be-d7395f9c8069",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      <progress value='466' class='' max='12000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      3.88% [466/12000 09:13&lt;3:48:09 Sampling 4 chains, 0 divergences]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Not enough samples to build a trace.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/sampling/mcmc.py:1019\u001b[0m, in \u001b[0;36m_mp_sample\u001b[0;34m(draws, tune, step, chains, cores, random_seed, start, progressbar, trace, model, callback, discard_tuned_samples, mp_ctx, **kwargs)\u001b[0m\n\u001b[1;32m   1018\u001b[0m \u001b[39mwith\u001b[39;00m sampler:\n\u001b[0;32m-> 1019\u001b[0m     \u001b[39mfor\u001b[39;00m draw \u001b[39min\u001b[39;00m sampler:\n\u001b[1;32m   1020\u001b[0m         strace \u001b[39m=\u001b[39m traces[draw\u001b[39m.\u001b[39mchain]\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/sampling/parallel.py:447\u001b[0m, in \u001b[0;36mParallelSampler.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    446\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_active:\n\u001b[0;32m--> 447\u001b[0m     draw \u001b[39m=\u001b[39m ProcessAdapter\u001b[39m.\u001b[39;49mrecv_draw(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_active)\n\u001b[1;32m    448\u001b[0m     proc, is_last, draw, tuning, stats \u001b[39m=\u001b[39m draw\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/sampling/parallel.py:317\u001b[0m, in \u001b[0;36mProcessAdapter.recv_draw\u001b[0;34m(processes, timeout)\u001b[0m\n\u001b[1;32m    316\u001b[0m pipes \u001b[39m=\u001b[39m [proc\u001b[39m.\u001b[39m_msg_pipe \u001b[39mfor\u001b[39;00m proc \u001b[39min\u001b[39;00m processes]\n\u001b[0;32m--> 317\u001b[0m ready \u001b[39m=\u001b[39m multiprocessing\u001b[39m.\u001b[39;49mconnection\u001b[39m.\u001b[39;49mwait(pipes)\n\u001b[1;32m    318\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m ready:\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/multiprocessing/connection.py:936\u001b[0m, in \u001b[0;36mwait\u001b[0;34m(object_list, timeout)\u001b[0m\n\u001b[1;32m    935\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 936\u001b[0m     ready \u001b[39m=\u001b[39m selector\u001b[39m.\u001b[39;49mselect(timeout)\n\u001b[1;32m    937\u001b[0m     \u001b[39mif\u001b[39;00m ready:\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/selectors.py:416\u001b[0m, in \u001b[0;36m_PollLikeSelector.select\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    415\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 416\u001b[0m     fd_event_list \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_selector\u001b[39m.\u001b[39;49mpoll(timeout)\n\u001b[1;32m    417\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mInterruptedError\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m idata \u001b[39m=\u001b[39m pm\u001b[39m.\u001b[39;49msample(\u001b[39m2000\u001b[39;49m, tune\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m, target_accept\u001b[39m=\u001b[39;49m\u001b[39m0.9\u001b[39;49m, model\u001b[39m=\u001b[39;49m model4)\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/sampling/mcmc.py:529\u001b[0m, in \u001b[0;36msample\u001b[0;34m(draws, step, init, n_init, initvals, trace, chains, cores, tune, progressbar, model, random_seed, discard_tuned_samples, compute_convergence_checks, callback, jitter_max_retries, return_inferencedata, keep_warning_stat, idata_kwargs, mp_ctx, **kwargs)\u001b[0m\n\u001b[1;32m    527\u001b[0m _print_step_hierarchy(step)\n\u001b[1;32m    528\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 529\u001b[0m     mtrace \u001b[39m=\u001b[39m _mp_sample(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49msample_args, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mparallel_args)\n\u001b[1;32m    530\u001b[0m \u001b[39mexcept\u001b[39;00m pickle\u001b[39m.\u001b[39mPickleError:\n\u001b[1;32m    531\u001b[0m     _log\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mCould not pickle model, sampling singlethreaded.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/sampling/mcmc.py:1040\u001b[0m, in \u001b[0;36m_mp_sample\u001b[0;34m(draws, tune, step, chains, cores, random_seed, start, progressbar, trace, model, callback, discard_tuned_samples, mp_ctx, **kwargs)\u001b[0m\n\u001b[1;32m   1038\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1039\u001b[0m     \u001b[39mif\u001b[39;00m discard_tuned_samples:\n\u001b[0;32m-> 1040\u001b[0m         traces, length \u001b[39m=\u001b[39m _choose_chains(traces, tune)\n\u001b[1;32m   1041\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1042\u001b[0m         traces, length \u001b[39m=\u001b[39m _choose_chains(traces, \u001b[39m0\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/pymc/backends/base.py:581\u001b[0m, in \u001b[0;36m_choose_chains\u001b[0;34m(traces, tune)\u001b[0m\n\u001b[1;32m    579\u001b[0m lengths \u001b[39m=\u001b[39m [\u001b[39mmax\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(trace) \u001b[39m-\u001b[39m tune) \u001b[39mfor\u001b[39;00m trace \u001b[39min\u001b[39;00m traces]\n\u001b[1;32m    580\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39msum\u001b[39m(lengths):\n\u001b[0;32m--> 581\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mNot enough samples to build a trace.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    583\u001b[0m idxs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(lengths)\n\u001b[1;32m    584\u001b[0m l_sort \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(lengths)[idxs]\n",
-      "\u001b[0;31mValueError\u001b[0m: Not enough samples to build a trace."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "NUTS: [sigma, R0, lambda]\n"
      ]
     }
    ],
@@ -215,7 +191,7 @@
   "kernelspec": {
    "display_name": "pymcmain",
    "language": "python",
-   "name": "pymcmain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
