--- a/research-lq.ipynb
+++ b/research-lq.ipynb
@@ -300,7 +300,7 @@
     "        return res\n",
     "\n",
     "    ks_o = np.repeat(1,11).tolist()\n",
-    "    ks_res =leastsq(error_loss, ks_o, args=(dataset,))[0]\n",
+    "    ks_res =leastsq(_error_loss, ks_o, args=(dataset,))[0]\n",
     "    return ks_res\n",
     "\n",
     "dataset = MyDataset(\"dataset/data.csv\")\n",
